# sheetsage-infer

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMIT_CHECKLIST.md  COMMIT_MESSAGE.txt  NOTICE  README.md  README_ADDITIONS_CHECKLIST.md  TEST_BEFORE_PUSH.md  install_jukebox_reproduce.sh  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
.specstory/: .project.json
.specstory/history/: 2025-12-31_13-42Z-scripts-for-potential-deletion.md  2025-12-31_14-00Z-midi-file-content-and-json-data.md  2026-01-01_10-51Z-pypi-publishing-workflow.md
docs/: CLAUDE.md  COMMIT_CHECKLIST.md  FILES_TO_ADD.md  JUKEBOX_SLICE_EXPERIMENT.md  README_ADDITIONS_CHECKLIST.md  README_TESTS.md  REPOSITORY_RESET_GUIDE.md  TEST_BEFORE_PUSH.md
examples/: __init__.py  basic_transcription.py  hooktheory_example.py  hooktheory_simple.py  jukebox_transcription.py  sheetsage_infer_colab.ipynb  transcribe_hooktheory_segments.py
hooktheory_data/: -WeglAPLxrY.mid  Hooktheory_Test_Segments.json
hooktheory_transcription_results/KyvmrnezmOW/: KyvmrnezmOW.ly  KyvmrnezmOW.mid  metadata.json
hooktheory_transcription_results/YRzojGekmDe/: YRzojGekmDe.ly  YRzojGekmDe.mid  metadata.json
hooktheory_transcription_results/l_NgbzOXgQA/: l_NgbzOXgQA.ly  l_NgbzOXgQA.mid  metadata.json
hooktheory_transcription_results/pyvgPG-dmYq/: metadata.json  pyvgPG-dmYq.ly  pyvgPG-dmYq.mid
hooktheory_transcription_results/qveoYZrGmdn/: metadata.json  qveoYZrGmdn.ly  qveoYZrGmdn.mid
jukebox_test_output/: lead_sheet_jukebox.ly  lead_sheet_jukebox.midi
notebooks/: Inference.ipynb
sheetsage/: __init__.py  assets.py  beat_track.py  device.py  infer.py  session.py  utils.py
sheetsage/_jukebox/: __init__.py  hparams.py  slice.py
sheetsage/assets/: jukebox.json  sheetsage.json
sheetsage/config/: __init__.py  checkpoints.toml
sheetsage/modules/: modules.py
sheetsage/pipeline/: __init__.py  steps.py  types.py
sheetsage/representations/: __init__.py  __init__bak.py  handcrafted.py  jukebox.py
sheetsage/representations/jukebox_modules/: __init__.py  api.py  cli.py  embeddings.py  hparams.py  make_models.py  sample.py
sheetsage/representations/jukebox_modules/prior/: autoregressive.py  conditioners.py  prior.py
sheetsage/representations/jukebox_modules/transformer/: factored_attention.py  ops.py  transformer.py
sheetsage/representations/jukebox_modules/utils/: audio_utils.py  dist_adapter.py  dist_utils.py  logger.py  remote_utils.py  sample_utils.py  torch_utils.py
sheetsage/representations/jukebox_modules/vqvae/: bottleneck.py  encdec.py  resnet.py  vqvae.py
sheetsage/theory/: basic.py  internal.py  lead_sheet.py  theorytab.py  utils.py
tests/: README_TESTS.md  __init__.py  _env_fixtures.py  conftest.py  test_assets.py  test_device_session.py  test_handcrafted_regression.py  test_imports.py  test_integration_full.py  test_jukebox_slice_experiment.py  test_jukebox_smoke.py  test_lead_sheet_regression.py  test_notebook_pattern.py  test_output_formats.py  test_representations.py  test_signatures.py  test_theory_classes.py
tests/fixtures/: handcrafted_test_mp3_ref.npy  lead_sheet_test_wav_env.json  lead_sheet_test_wav_ref.ly
