[project]
name = "sheetsage"
version = "0.1.0"
description = "Minimal inference-only version of SheetSage for music transcription"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Chris Donahue" }
]
keywords = [
    "music",
    "transcription",
    "chords",
    "lead-sheet",
    "music-theory",
    "audio-analysis",
    "jukebox",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0.0",
    "jukebox-infer>=0.1.0",
    "madmom>=0.16.0",
    "librosa>=0.11.0",
    "numpy>=2.0.0",
    "scipy>=1.16.0",
    "audioread>=3.1.0",
    "soundfile>=0.13.0",
    "validators>=0.35.0",
    "pillow>=12.0.0",
    "scikit-learn>=1.7.0",
    "pretty-midi>=0.2.11",
    "tqdm>=4.0.0",
    "yt-dlp>=2025.11.0",
    "resampy>=0.4.0",  # Required by librosa for audio resampling
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/openmirlab/sheetsage-infer"
Repository = "https://github.com/openmirlab/sheetsage-infer"
Issues = "https://github.com/openmirlab/sheetsage-infer/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sheetsage"]

[tool.uv.extra-build-dependencies]
madmom = ["Cython"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

